--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>T-Rex 3js</title>
     <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
-    
+    <canvas class="webgl"></canvas>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
