--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
+    <div class="marque">
+        <h1>TREX</h1>
+    </div>
     <canvas class="webgl"></canvas>
     <script type="module" src="/src/main.js"></script>
 </body>
