--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,43 +14,24 @@
         <h1>TREX</h1>
     </div>
     <main>
-        <nav>
-            <p>CHAPTER I</p>
-            <p>CHAPTER II</p>
-            <p>CHAPTER III</p>
-            <p>CHAPTER IV</p>
-            <p>CHAPTER V</p>
+        <nav id="chapter-nav">
+            <p id="nav-1">CHAPTER I</p>
+            <p id="nav-2">CHAPTER II</p>
+            <p id="nav-3">CHAPTER III</p>
+            <p id="nav-4">CHAPTER IV</p>
+            <p id="nav-5">CHAPTER V</p>
         </nav>
-        <div class="section">
-            <h1>The apex predator waits...</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit, labore quos sit! Ea quaerat explicabo nostrum! Nobis!</p>
-        </div>
-        <div class="section">
-            <h1>The apex predator waits...</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit, labore quos sit! Ea quaerat explicabo nostrum! Nobis!</p>
-        </div>
-        <div class="section">
-            <h1>The apex predator waits...</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit, labore quos sit! Ea quaerat explicabo nostrum! Nobis!</p>
-        </div>
-        <div class="section">
-            <h1>The apex predator waits...</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit, labore quos sit! Ea quaerat explicabo nostrum! Nobis!</p>
-        </div>
-        <div class="section">
-            <h1>The apex predator waits...</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit, labore quos sit! Ea quaerat explicabo nostrum! Nobis!</p>
+        <div id="content">
+            <h1 id="chapter-title">The apex predator waits...</h1>
+            <p id="chapter-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nihil deserunt quia odio expedita, porro omnis, numquam ipsum quaerat minima asperiores placeat impedit.</p>
         </div>
     </main>
+    <div id="transition-veil"></div>
+    <button id="start-btn">ENTER EXPERIENCE</button>
     <canvas class="webgl"></canvas>
     <script type="module" src="/src/main.js"></script>
 </body>
-</html> -->
-
-
-
-
-
+</html>
 
 
 
@@ -139,6 +120,11 @@
     <script type="module" src="/src/index.js"></script>
 </body>
 </html> -->
+<!-- 
+
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -187,14 +173,27 @@
             z-index: 300; background: #ff0000; color: white; border: none;
             padding: 15px 40px; font-weight: bold; cursor: pointer;
         }
+
+        #chapter-nav p {
+    opacity: 0.3;
+    transition: all 0.5s ease;
+}
+
+#chapter-nav p.active {
+    opacity: 1;
+    color: #ff0000;
+    font-weight: bold;
+    transform: scale(1.1);
+}
     </style>
 </head>
 <body>
-    <nav>
-        <span id="nav-1" class="active">The Ambush</span>
-        <span id="nav-2">The Pursuit</span>
-        <span id="nav-3">The Scream</span>
-        <span id="nav-4">The Defense</span>
+    <nav id="chapter-nav">
+        <p id="nav-1">CHAPTER I</p>
+        <p id="nav-2">CHAPTER II</p>
+        <p id="nav-3">CHAPTER III</p>
+        <p id="nav-4">CHAPTER IV</p>
+        <p id="nav-5">CHAPTER V</p>
     </nav>
 
     <div id="bg-text">TREX</div>
@@ -210,6 +209,6 @@
     <button id="start-btn">ENTER EXPERIENCE</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/testing23jan.js"></script>
 </body>
-</html>
+</html> -->
